<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".QuizActivity"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_quizactivity_questiontxt"
        android:layout_gravity="center"
        android:text="@string/txt_quizactivity_questiontxt"
        android:padding="14dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_quizactivity_true"
            android:text="@string/btn_quizactivity_true"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_quizactivity_false"
            android:text="@string/btn_quizactivity_false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_quizactivity_prev"
            android:text="@string/btn_quizactivity_prev"
            android:padding="5dp"
            android:drawableLeft="@drawable/arrow_left"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_quizactivity_next"
            android:text="@string/btn_quizactivity_next"
            android:padding="5dp"
            android:drawableRight="@drawable/arrow_right"/>
    </LinearLayout>

</LinearLayout>
